kubernetes/environments/scs-public/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: status-page-api
spec:
  rules:
  - host: status-idp.k8s.scs.community
    http:
      paths:
      - backend:
          service:
            name: scs-status-page-dex
            port:
              number: 5556
        path: /
        pathType: Prefix
  - host: status.k8s.scs.community
    http:
      paths:
      - backend:
          service:
            name: scs-status-page-oathkeeper
            port:
              number: 4455
        path: /
        pathType: Prefix
